--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small">
                 <a href="#vr-apps" class="w3-bar-item w3-button">VR Apps</a>
+                <a href="#projects" class="w3-bar-item w3-button">Projects</a>
                 <a href="#about" class="w3-bar-item w3-button">About</a>
                 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
             </div>
@@ -73,6 +74,22 @@
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
                         <img src="img/matterportvr/matterport.jpg" alt="Matterport VR logo" style="width:100%">
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Project Section -->
+        <div class="w3-container w3-padding-32" id="projects">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+        </div>
+
+        <div class="w3-row-padding">
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="projects/platonic-solids.html" target="_">
+                    <div class="w3-display-container">
+                        <div class="project-title w3-display-topleft w3-padding">Platonic Solids</div>
+                        <img src="img/platonic-solids/platonic-solids.jpeg" alt="Platonic Solids logo" style="width:100%">
                     </div>
                 </a>
             </div>
