--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>VR Tools - Sites in VR</title>
+<title>Work in Progress</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../css/w3.css">
@@ -26,16 +26,13 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects ">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Sites in VR</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Work in progress</h1>
         </div>
 
         <!-- images/slideshow -->
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="../img/sitesinvr/screenshot1.png " onclick="openModal(1)">
-            <img class="slide " src="../img/sitesinvr/screenshot2.png " onclick="openModal(2)">
-            <img class="slide " src="../img/sitesinvr/screenshot3.png " onclick="openModal(3)">
-            <img class="slide " src="../img/sitesinvr/screenshot4.png " onclick="openModal(4)">
+            <img class="slide " src="../img/work-in-progress.png " alt="Work tools crossed" onclick="openModal(1)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
@@ -43,10 +40,7 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="../img/sitesinvr/screenshot1.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="../img/sitesinvr/screenshot2.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="../img/sitesinvr/screenshot3.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="../img/sitesinvr/screenshot4.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="../img/work-in-progress.png" style="height: 100%; background-color: white;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
@@ -55,19 +49,9 @@
             <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
         </div>
 
-        <div class="w3-container w3-padding-48 " id="about ">
-            <p>
-                Sites in VR gives you the opportunity to travel virtually and see world famous landmarks in several countries, such as Turkey, Egypt, Saudi Arabia, Belgium, France and many more. You may also explore the wonders of the Islamic architecture. What about
-                visiting mosques, palaces, museums, castles, religious sites or ancient cities?
-            </p>
-            <p>
-                The app has more than a 1000 panoramic high qualities images and it can take you to places like the Egypt pyramids or even to the moon. Do not waste your time, check it right now!
-            </p>
-        </div>
-
-        <div class=" w3-center w3-padding-16 ">
-            <a href="https://play.google.com/store/apps/details?id=air.com.ercangigi.sitesin3d&hl=en" target="_blank "><img class="badge " src="../img/google-play-badge.png " alt=" "></a>
-            <a href="https://apps.apple.com/us/app/sites-in-vr/id625987419" target="_blank "><img class="badge " src="../img/app-store-badge.svg " alt=" "></a>
+        <div class="w3-container w3-padding-48 " id="about">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, neque! Atque ipsa vel temporibus voluptates distinctio modi suscipit eveniet officiis tempore necessitatibus voluptatibus aspernatur, fugiat iusto dolor animi, reprehenderit id!</p>
+            <p>Nullam elementum erat et pharetra imperdiet. Phasellus tempus arcu quis est consectetur fermentum. Vivamus mauris metus, suscipit non nibh eget, congue ullamcorper enim. Proin rhoncus tortor a arcu eleifend, sed hendrerit augue mollis. Mauris mi sapien, dignissim et tincidunt sit amet, maximus sed sapien. Fusce varius, sem non euismod porttitor, mi ex dignissim lorem, in euismod nisl lorem finibus dolor.</p>
         </div>
 
         <!-- End page content -->
