--- a/vrapps/gartsculture.html
+++ b/vrapps/gartsculture.html
@@ -15,6 +15,7 @@
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small ">
                 <a href="../index.html#vr-apps" class="w3-bar-item w3-button">VR Apps</a>
+                <a href="../index.html#projects" class="w3-bar-item w3-button">Projects</a>
                 <a href="../index.html#about " class="w3-bar-item w3-button ">About</a>
                 <a href="../index.html#contact " class="w3-bar-item w3-button ">Contact</a>
             </div>
