--- a/projects/platonic-solids-application.html
+++ b/projects/platonic-solids-application.html
@@ -8,7 +8,21 @@
             body {
                 margin: 0;
                 overflow: hidden;
-            }
+            } 
+
+            canvas {
+				display: block;
+				width: 100%;
+				height: 100%;
+			}
+
+            #newWindow {
+				display: block;
+				position: absolute;
+				bottom: 0.3em;
+				left: 0.5em;
+				color: #fff;
+			}
         </style>
 
         <!-- Libraries of configuration -->
@@ -27,6 +41,8 @@
 
     <body>
 
+        <!-- Open the application on another tab -->
+        <a id="newWindow" href="./platonic-solids-application.html" target="_blank">Open in New Window</a>
         <div id="webgl-output" ></div>
         <script type="text/javascript"> (function () { init() })(); </script>
     </body>
