--- a/projects/src/platonic-solids-application.html
+++ b/projects/src/platonic-solids-application.html
@@ -16,23 +16,29 @@
 				height: 100%;
 			}
 
+            a {
+                color: var(--color-blue);
+                cursor: pointer;
+                text-decoration: none;
+            }
+
             #newWindow {
 				display: block;
 				position: absolute;
 				bottom: 0.3em;
-				left: 0.5em;
+				left: 0.4em;
 				color: #fff;
 			}
         </style>
 
         <!-- Libraries of configuration -->
-        <script type="text/javascript" charset="UTF-8" src="libs/three/three.js"></script>
-        <script type="text/javascript" charset="UTF-8" src="libs/three/controls/TrackballControls.js"></script>
-        <script type="text/javascript" src="libs/util/Stats.js"></script>
-        <script type="text/javascript" src="libs/util/dat.gui.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
+        <script type="text/javascript" src="../libs/util/Stats.js"></script>
+        <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
         
         <!-- There are many useful functionss -->
-        <script type="text/javascript" src="libs/util/util.js"></script>
+        <script type="text/javascript" src="../libs/util/util.js"></script>
 
         <!-- Library of example -->
         <script type="text/javascript" src="platonic-solids.js"></script>
