--- a/projects/src/platonic-solids-application-AR.html
+++ b/projects/src/platonic-solids-application-AR.html
@@ -31,24 +31,25 @@
 
         <!-- Libraries of configuration (Default) -->
         <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
-        <script type="text/javascript" src="../libs/util/Stats.js"></script>
-        <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.js"></script>
+        <link rel="stylesheet" href="../libs/util/dat.gui.css">
 
         <!-- Library of Augmented Reality that uses Three.js -->
-        <script src="../libs/MarkerTracking--LocationBasedAR/THREE/ar.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="../libs/MarkerTracking--LocationBasedAR/THREE/ar.js"></script>
         <script>THREEx.ArToolkitContext.baseURL = "../"</script>  <!-- Define o local do contexto -->
         
         <!-- There are many useful functionss -->
-        <script type="text/javascript" src="../libs/util/util.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
 
         <!-- Library of example -->
-        <script type="text/javascript" src="platonic-solids-AR.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="platonic-solids-AR.js"></script>
 
     </head>
 
     <body>
         <div id="webgl-output" ></div>
-        <script type="text/javascript"> 
+        <script type="text/javascript" charset="UTF-8"> 
             main();
         </script>
 
