--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
-
+<link rel="shortcut icon" href="favicon.ico" />
+    
 <style>
     .project-title {
         color: white;
