--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -35,10 +35,12 @@
 
     <!-- Libraries of configuration -->
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/OrbitControls.js"></script>
     <script type="text/javascript" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
+
+    <!-- Loading screen -->
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/loadScreen/LoadScreen.js"></script>
 
     <!-- There are many useful functionss -->
     <script type="text/javascript" src="../libs/util/util.js"></script>
@@ -57,7 +59,7 @@
     </div>
     <div id="webgl-output"></div>
     <script type="text/javascript">
-        init();
+        main();
     </script>
 </body>
 
