--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -54,12 +54,32 @@
 
     <!-- Open the application on another tab -->
     <div id="newWindow">
-        <p><a id="" href="./solar-system-application.html" target="_blank">Open in New Window</a></p>
+        <p><a id="" href="./solar-system-application.html?quality=0" target="_blank">Medium Quality</a></p>
+        <p><a id="" href="./solar-system-application.html?quality=1" target="_blank">High Quality</a></p>
         <p><a id="" href=" " target="_blank">Open in Augmented Reality</a></p>
     </div>
     <div id="webgl-output"></div>
     <script type="text/javascript">
-        mainMediumQuality();
+
+        // Seed to Medium or High Quality
+        var quality = location.search;
+
+        if(quality.length != 0){                   //QUALITY PASSED BY URL
+            let aux = "?quality=";
+            quality = quality.substring(aux.length, quality.length);
+            quality = parseInt(quality);
+            switch(quality){
+                case 0:             // Medium Quality
+                    mainMediumQuality();
+                    break;
+                case 1:             // High Quality
+                    mainHighQuality();
+                    break;
+            }
+        }
+        else{                                           //NOT QUALITY SETTED
+            mainMediumQuality();
+        }
     </script>
 </body>
 
