--- a/projects/src/solar-system-application-AR.html
+++ b/projects/src/solar-system-application-AR.html
@@ -39,6 +39,10 @@
     <script type="text/javascript" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
 
+    <!-- Library of Augmented Reality that uses Three.js -->
+    <script type="text/javascript" charset="UTF-8" src="../libs/MarkerTracking--LocationBasedAR/THREE/ar.js"></script>
+    <script>THREEx.ArToolkitContext.baseURL = "../"</script>  <!-- Define o local do contexto -->
+
     <!-- Loading screen -->
     <script type="text/javascript" charset="UTF-8" src="../libs/util/loadScreen/LoadScreen.js"></script>
 
@@ -46,7 +50,7 @@
     <script type="text/javascript" src="../libs/util/util.js"></script>
 
     <!-- Library of example -->
-    <script type="text/javascript" src="./solar-system.js"></script>
+    <script type="text/javascript" src="./solar-system-AR.js"></script>
 
 </head>
 
@@ -56,13 +60,13 @@
     <div id="newWindow">
         <p><a id="" href="./solar-system-application.html?quality=0" target="_blank">Medium Quality</a></p>
         <p><a id="" href="./solar-system-application.html?quality=1" target="_blank">High Quality</a></p>
-        <p><a id="" href="./solar-system-application-AR.html" target="_blank">Open in Augmented Reality</a></p>
+        <p><a id="" href="./solar-system-application-AR.html" target="_blank">Augmented Reality</a></p>
     </div>
     <div id="webgl-output"></div>
     <script type="text/javascript">
 
         // Seed to Medium or High Quality
-        var quality = location.search;
+        /*var quality = location.search;
 
         if(quality.length != 0){                   //QUALITY PASSED BY URL
             let aux = "?quality=";
@@ -79,7 +83,8 @@
         }
         else{                                           //NOT QUALITY SETTED
             mainMediumQuality();
-        }
+        }*/
+        mainMediumQuality();
     </script>
 </body>
 
