--- a/projects/src/solar-system-application-VR.html
+++ b/projects/src/solar-system-application-VR.html
@@ -93,7 +93,7 @@
             <img id="marsMap" src="./assets/textures/space/2k_mars.jpg"></img>
             <img id="jupiterMap" src="./assets/textures/space/2k_jupiter.jpg"></img>
             <img id="saturnMap" src="./assets/textures/space/2k_saturn.jpg"></img>
-            <img id="saturnRingMap" src="./assets/textures/space/2k_saturn_ring_alpha.png"></img>
+            <img id="saturnRingMap" src="./assets/textures/space/SaturnRing.jpg"></img>
             <img id="uranusMap" src="./assets/textures/space/2k_uranus.jpg"></img>
             <img id="neptuneMap" src="./assets/textures/space/2k_neptune.jpg"></img>
         </a-assets>
