--- a/projects/src/solar-system-application-VR.html
+++ b/projects/src/solar-system-application-VR.html
@@ -56,29 +56,21 @@
             },
             // Após a cena ser renderizada
             tock: function(time, timeDelta, camera){
-                for(let i = 0; i < objectArray.length;i++){
-                    objectArray[i].rotateY(0.01);
+                for(let i = 0; i < rotationObjects.length; i++){
+                    rotationObjects[i].rotateY(rotationObjects[i].speedRotation);
+                }
+                for(let i = 0; i < TranslationObjects.length; i++){
+                    TranslationObjects[i].rotateY(TranslationObjects[i].speedTranslation);
                 }
             },
             update: function(){
             }
         });
-
-        AFRAME.registerComponent('cam_controller', {
-            schema: function(){},
-            init: function(){
-                self = this;
-                //var camera = self.el;   // var cameraEl = document.querySelector('#camera');
-                //camera.object3D.children[0].lookAt(0,0,0);
-            },
-        });
     </script>
 
     <a-scene main_scene id="scene" stats time light="defaultLightsEnabled: false" shadow="type: pcfsoft">
-        <a-entity cam_controller id="camera" camera="active: true;" position="-2 5 -2">
-            <script type="text/javascript">
-            // To work the LookAt function of the camera
-            </script>
+        <a-entity id="camera" camera="active: true;" position="0 8 70" 
+        look-controls wasd-controls="acceleration:600">
         </a-entity>
 
         <!-- Asset management system. -->
@@ -100,8 +92,8 @@
 
         <!-- Lights -->
         <a-entity light="type: ambient; color: #AAA"></a-entity>
-        <a-sphere radius="0.25" position="0 0 -10">
-            <a-entity light="type: point; castShadow: true; intensity: 0.75; distance: 100; decay: 2;" 
+        <a-sphere radius="0.25" position="0 0 0">
+            <a-entity light="type: point; castShadow: true; intensity: 0.40; distance: 50; decay: 1;" 
             position="0 0 0"></a-entity>
         </a-sphere>
 
@@ -113,42 +105,50 @@
 
         <!-- Galaxy Objects -->
 
-        <a-sphere id="sun" material="shader: standard; src: #sunMap;" shadow="cast: false; receive: false" position="0 0 0" radius="1.0"></a-sphere>
+        <a-sphere id="sun" material="shader: flat; src: #sunMap;" position="0 0 0" radius="11.0"></a-sphere>
 
         <a-entity id="mercuryBox" position="0 0 0">
-            <a-sphere id="mercury" material="shader: standard; src: #mercuryMap;" shadow="cast: true; receive: true" position="0 0 10" radius="1.0"></a-sphere>
+            <a-sphere id="mercury" material="shader: standard; src: #mercuryMap;" 
+            shadow="cast: true; receive: false" position="0 0 21" radius="1.0"></a-sphere>
         </a-entity>
         
         <a-entity id="venusBox" position="0 0 0">
-            <a-sphere id="venus" material="shader: standard; src: #venusMap;" shadow="cast: true; receive: true" position="0 0 15" radius="1.0"></a-sphere>
+            <a-sphere id="venus" material="shader: standard; src: #venusMap;" 
+            shadow="cast: true; receive: false" position="0 0 26" radius="1.0"></a-sphere>
         </a-entity>
 
-        <a-entity id="moonBox" position="0 0 0">
-            <a-sphere id="moon" material="shader: standard; src: #moonMap;" shadow="cast: true; receive: true" position="0 0 18" radius="1.0"></a-sphere>
-        </a-entity>
-
-        <a-entity id="earthBox" position="0 0 0">
-            <a-sphere id="earth" material="shader: standard; src: #earthMap;" shadow="cast: true; receive: true" position="0 0 20" radius="1.0"></a-sphere>
+        <a-entity id="moonEarthBox" position="0 0 0">
+            <a-sphere id="earth" material="shader: standard; src: #earthMap;" 
+                shadow="cast: true; receive: true" position="0 0 31" radius="1.0"></a-sphere> 
+            <a-entity id="moonBox" position="0 0 31">
+                <a-sphere id="moon" material="shader: standard; src: #moonMap;" 
+                shadow="cast: true; receive: true" position="0 0 3" radius="0.5"></a-sphere>  
+            </a-entity>  
         </a-entity>
 
         <a-entity id="marsBox" position="0 0 0">
-            <a-sphere id="mars" material="shader: standard; src: #marsMap;" shadow="cast: true; receive: true" position="0 0 25" radius="1.0"></a-sphere>
+            <a-sphere id="mars" material="shader: standard; src: #marsMap;" 
+            shadow="cast: true; receive: false" position="0 0 36" radius="1.0"></a-sphere>
         </a-entity>
 
         <a-entity id="jupiterBox" position="0 0 0">
-            <a-sphere id="jupiter" material="shader: standard; src: #jupiterMap;" shadow="cast: true; receive: true" position="0 0 30" radius="1.0"></a-sphere>
+            <a-sphere id="jupiter" material="shader: standard; src: #jupiterMap;" 
+            shadow="cast: true; receive: false" position="0 0 46" radius="4.0"></a-sphere>
         </a-entity>
 
         <a-entity id="saturnBox" position="0 0 0">
-            <a-sphere id="saturn" material="shader: standard; src: #saturnMap;" shadow="cast: true; receive: true" position="0 0 35" radius="1.0"></a-sphere>    
+            <a-sphere id="saturn" material="shader: standard; src: #saturnMap;" 
+            shadow="cast: true; receive: false" position="0 0 54" radius="1.0"></a-sphere>    
         </a-entity>
 
         <a-entity id="uranusBox" position="0 0 0">
-            <a-sphere id="uranus" material="shader: standard; src: #uranusMap;" shadow="cast: true; receive: true" position="0 0 40" radius="1.0"></a-sphere>
+            <a-sphere id="uranus" material="shader: standard; src: #uranusMap;" 
+            shadow="cast: true; receive: false" position="0 0 61" radius="1.0"></a-sphere>
         </a-entity>
 
         <a-entity id="neptuneBox" position="0 0 0">
-            <a-sphere id="neptune" material="shader: standard; src: #neptuneMap;" shadow="cast: true; receive: true" position="0 0 45" radius="1.0"></a-sphere>
+            <a-sphere id="neptune" material="shader: standard; src: #neptuneMap;" 
+            shadow="cast: true; receive: false" position="0 0 66" radius="1.0"></a-sphere>
         </a-entity>            
 
         <a-sky id="skyBox" material="src: #skyBoxMap"></a-sky>
@@ -157,36 +157,60 @@
             var scene = document.querySelector('#scene').object3D;
             var camera = document.querySelector('#camera').object3D;
             var axis = document.querySelector('#axis').object3D;
-            //axis.visible = false;
+            axis.visible = false;
 
-            var objectArray = new Array();
-            objectArray.push(document.querySelector('#sun').object3D);
-            objectArray.push(document.querySelector('#mercury').object3D);
-            objectArray.push(document.querySelector('#venus').object3D);
-            objectArray.push(document.querySelector('#moon').object3D);
-            objectArray.push(document.querySelector('#earth').object3D);
-            objectArray.push(document.querySelector('#mars').object3D);
-            objectArray.push(document.querySelector('#jupiter').object3D);
-            objectArray.push(document.querySelector('#saturn').object3D);
-            objectArray.push(document.querySelector('#uranus').object3D);
-            objectArray.push(document.querySelector('#neptune').object3D);
+            var rotationObjects = new Array();
+            var TranslationObjects = new Array();
+            rotationObjects.push(document.querySelector('#sun').object3D);
+            rotationObjects.push(document.querySelector('#mercury').object3D);
+            rotationObjects.push(document.querySelector('#venus').object3D);
+            //rotationObjects.push(document.querySelector('#moon').object3D);
+            rotationObjects.push(document.querySelector('#earth').object3D);
+            rotationObjects.push(document.querySelector('#mars').object3D);
+            rotationObjects.push(document.querySelector('#jupiter').object3D);
+            rotationObjects.push(document.querySelector('#saturn').object3D);
+            rotationObjects.push(document.querySelector('#uranus').object3D);
+            rotationObjects.push(document.querySelector('#neptune').object3D);
 
-            // Boxes
-            objectArray.push(document.querySelector('#mercuryBox').object3D);
-            objectArray.push(document.querySelector('#venusBox').object3D);
-            objectArray.push(document.querySelector('#moonBox').object3D);
-            objectArray.push(document.querySelector('#earthBox').object3D);
-            objectArray.push(document.querySelector('#marsBox').object3D);
-            objectArray.push(document.querySelector('#jupiterBox').object3D);
-            objectArray.push(document.querySelector('#saturnBox').object3D);
-            objectArray.push(document.querySelector('#uranusBox').object3D);
-            objectArray.push(document.querySelector('#neptuneBox').object3D);
+            var speedRotation = 0.01;
 
-            camera.children[0].lookAt(0,0,0);
-            document.querySelector('#camera').setAttribute('look-controls', '');    //Adiciona o atributo de movimentação da câmera
+            for(let i = 0; i < rotationObjects.length; i++){
+                rotationObjects[i].speedRotation = speedRotation;
+            }
 
-            //document.querySelector('#camera').setAttribute('wasd-controls', '');
-            //document.querySelector('#camera').add(look-controls);
+            // Boxes --- Translation Moviment
+            TranslationObjects.push(document.querySelector('#mercuryBox').object3D);
+            TranslationObjects.push(document.querySelector('#venusBox').object3D);
+            TranslationObjects.push(document.querySelector('#moonEarthBox').object3D);
+            TranslationObjects.push(document.querySelector('#moonBox').object3D);
+            TranslationObjects.push(document.querySelector('#marsBox').object3D);
+            TranslationObjects.push(document.querySelector('#jupiterBox').object3D);
+            TranslationObjects.push(document.querySelector('#saturnBox').object3D);
+            TranslationObjects.push(document.querySelector('#uranusBox').object3D);
+            TranslationObjects.push(document.querySelector('#neptuneBox').object3D);
+
+            var speedTranslation = 0.025;
+            for(let i = 0; i < TranslationObjects.length; i++){
+                TranslationObjects[i].speedTranslation = speedTranslation;
+                speedTranslation = speedTranslation - 0.0025;
+            }
+
+            // Fix the start rotation of planets
+            var angleRotation = -45;
+
+            for(let i = 0; i < TranslationObjects.length; i++){
+                if(i%2 === 0){  // pair index ===> invert sense
+                    TranslationObjects[i].rotateY(THREE.Math.degToRad(-angleRotation));
+                }
+                else{
+                    TranslationObjects[i].rotateY(THREE.Math.degToRad(angleRotation));
+                }
+                angleRotation = angleRotation + 19;
+            }
+
+            //camera.children[0].lookAt(0,0,0);
+            //document.querySelector('#camera').setAttribute('wasd-controls-enabled', '');
+            //document.querySelector('#camera').setAttribute('look-controls', '');    //Adiciona o atributo de movimentação da câmera
         </script>
     </a-scene>
 
