--- a/projects/src/solar-system-application-VR.html
+++ b/projects/src/solar-system-application-VR.html
@@ -69,9 +69,9 @@
     </script>
 
     <a-scene main_scene id="scene" stats time light="defaultLightsEnabled: false" shadow="type: pcfsoft">
-        <a-entity id="camera" camera="active: true;" position="0 8 70" 
+        <a-camera id="camera" camera="active: true;" position="0 8 70" 
         look-controls wasd-controls="acceleration:600">
-        </a-entity>
+        </a-camera>
 
         <!-- Asset management system. -->
         <a-assets timeout="10000">
