--- a/projects/src/solar-system-application-VR.html
+++ b/projects/src/solar-system-application-VR.html
@@ -73,7 +73,8 @@
     </script>
 
     <a-scene main_scene id="scene" time light="defaultLightsEnabled: false" 
-    ar-mode-ui="enabled: false" shadow="type: pcfsoft">
+    renderer="antialias: true; alpha: true"
+    shadow="type: pcfsoft">
         <a-entity id="rig" movement-controls position="0 6 70">
             <a-entity id="camera" camera position="0 1.6 0" look-controls="pointerLockEnabled: true"></a-entity>            
         </a-entity>
@@ -144,8 +145,12 @@
         <a-entity id="saturnBox" position="0 0 0">
             <a-sphere id="saturn" material="shader: standard; src: #saturnMap;" 
             shadow="cast: true; receive: false" position="0 0 54" radius="2.0">
-
-            </a-sphere>    
+            </a-sphere> 
+            <a-ring id="saturnRing" material="shader: flat; src: #saturnRingMap; 
+            opacity: 0.7; transparent: true; side: double"
+            position="0 0 54" rotation="-90 0 0" 
+            radius-inner="2.25" radius-outer="4.5"
+            ></a-ring>
         </a-entity>
 
         <a-entity id="uranusBox" position="0 0 0">
