--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -83,7 +83,9 @@
                 <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Other Tools</h3>
                 <p>
                     <a id="" href="./src/solar-system-application-AR.html" target="_blank">Augmented Reality in fullscreen</a>
-                    <br><b>* Authorization is required to use the <br> camera and focus on the hiro marker</b>
+                    <br><b>* Authorization is required to use the <br> camera and focus on the 
+                        <a id="" href="./data/markers/hiro.png" style="color: blue" target="_blank">HIRO</a> 
+                        marker</b>
                 </p>
                 <p>
                     <a id="" href="./src/solar-system-application-VR.html" target="_blank">Virtual Reality in fullscreen</a>
